[package]
name = "proxy_pool"
version = "0.1.0"
authors = ["Sinn <linsinn@outlook.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.34"
once_cell = "1.5.2"
r2d2 = "0.8.9"
redis = { version = "0.17.0", features = ["tokio-comp", "r2d2"] }
regex = "1.4.2"
reqwest = "0.10.8"
scraper = "0.12.0"
tokio = { version = "0.2", features = ["full"] }
